# SenseCAP-Watcher-Firmware

./: README.md
components/sensecap-watcher/: sensecap-watcher.c
components/sscma_client/src/: sscma_client_ops.c
examples/factory_firmware/main/: data_defs.h
examples/factory_firmware/main/app/: app_png.c  app_rgb.c
tests/prod_fw/: CMakeLists.txt  sdkconfig.defaults
tests/prod_fw/main/: CMakeLists.txt  console_audio.c  console_audio.h  console_bat.c  console_bat.h  console_device.c  console_device.h  console_gpio.c  console_gpio.h  console_gpio_bak.c  console_http.c  console_http.h  console_i2c.c  console_i2c.h  console_lcd.c  console_lcd.h  console_rtc.c  console_rtc.h  console_sscma.c  console_sscma.h  console_wifi.c  idf_component.yml  main.c  main.h
